k8s/read-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: read-server-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
          component: backend-read-server
    template:
        metadata:
            labels:
                component: backend-read-server
        spec:
            containers:
              - name: read-server
                image: sifarone/eod_analysis:read-server-3.0
                #image: sifarone/eod_analysis:read-server-debug-2.0
                ports:
                    - containerPort: 60000
            imagePullSecrets:
              - name: regcred
