k8s/write-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: write-server-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
          component: backend-write-server
    template:
        metadata:
            labels:
                component: backend-write-server
        spec:
            volumes:
              - name: write-server-storage
                persistentVolumeClaim:
                  claimName: write-server-persistent-volume-claim
            containers:
              - name: write-server
                #image: sifarone/eod_analysis:write-server-3.0
                image: sifarone/k8s_write_server
                ports:
                    - containerPort: 50000
                volumeMounts:
                  - name: write-server-storage
                    mountPath: ./data

            imagePullSecrets:
              - name: regcred
