k8s/read-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: read-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
      component: backend-read-server
  ports:
    - port: 60000
      targetPort: 60000
