k8s/ui-app-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: ui-app-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: ui-app
    ports:
      - port: 80
        targetPort: 80
